--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Homepage</title>
   </head>
   <body>
-    <h1>This is Xinyi Li's Website</h1>
+    <a href="sophie4922.github.io/aime.html">AIME</a> </br>
+    <a href="sophie4922.github.io/mpfg.html">MPFG</a> </br>
+    <a href="sophie4922.github.io/hmmt.html">HMMT</a> </br>
+    <a href="sophie4922.github.io/arml.html">ARML</a> </br>
+
   </body>
 </html>
