--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>Homepage</title>
   </head>
   <body>
-    <a href="sophie4922.github.io/aime.html">AIME</a> </br>
-    <a href="sophie4922.github.io/mpfg.html">MPFG</a> </br>
-    <a href="sophie4922.github.io/hmmt.html">HMMT</a> </br>
-    <a href="sophie4922.github.io/arml.html">ARML</a> </br>
+    <a href="aime.html">AIME</a> </br>
+    <a href="mpfg.html">MPFG</a> </br>
+    <a href="hmmt.html">HMMT</a> </br>
+    <a href="arml.html">ARML</a> </br>
 
   </body>
 </html>
