--- a/aime.html
+++ b/aime.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p> This page will eventually have AIME problems </p> </br>
-    <a href="index.html">go back</a>
+    <a href="https://sophie4922.github.io/index.html">go back</a>
   </body>
 </html>
