--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <a href="https://sophie4922.github.io/mpfg.html">MPFG</a> </br>
     <a href="https://sophie4922.github.io/hmmt.html">HMMT</a> </br>
     <a href="https://sophie4922.github.io/arml.html">ARML</a> </br>
+    <a href="https://sophie4922.github.io/jmo.html">JMO</a> </br>
+    <a href="https://sophie4922.github.io/usamo.html">USAMO</a> </br>
+    <a href="https://sophie4922.github.io/imo.html">IMO</a> </br>
+    <a href="https://sophie4922.github.io/isl.html">ISL</a> </br>
+    <a href="https://sophie4922.github.io/otis.html">OTIS</a> </br>
+    <a href="https://sophie4922.github.io/other.html">Other contests</a> </br>
 
   </body>
 </html>
